--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dino's Website</title>
+</head>
+<body>
+    <h1>Dino Panganiban's Porfolio</h1>
+    <h2>I'm an aspiring web developer</h2>
+    <hr>
+    <h3>Sample Video</h3>
+    <video controls width="400" height="400">
+        <source src="./assets/images/concert_video.mp4">
+        Your browser does not support the video tag
+    </video>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking project</a></h3>
+    <img src="./assets/images/movie_ranking_screenshot.jpg" height="250" alt="movie ranking screenshot"/>
+    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
+    <img src="./assets/images/birthday-cake.png" height=250 alt="birthday-cake"/>
+    <hr>
+    <a href="./public/about.html">About Me</a> 
+<a href="./public/contact.html">Contact Me</a>
+</body>
+
+</html>
+
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
 <!-- TODO 4: Add titles/subtitles etc. -->
 
+
+
+
+    
+
+
+    
 <!-- TODO 5: Add a link to the project pages -->
 
 <!-- TODO 6: Add images to show the project previews
@@ -13,3 +47,4 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
