--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +639175885131</p>
+<p>Email: dnpanganiban42@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
+  123 Some Street<br />
   Some City<br />
   Some Country <br />
 </p>
