--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Dino Panganiban's Porfolio</h1>
     <h2>I'm an aspiring web developer</h2>
+    <img src="./assets/images/dino_photo.jpeg" height="300" width="200" alt="photo of website owner"/>
     <hr>
     <h3>Sample Video</h3>
     <video controls width="400" height="400">
